WebKit Bugzilla
New
Browse
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
40261
[Qt] SmartReplaceQt.cpp has coding-style errors
https://bugs.webkit.org/show_bug.cgi?id=40261
Summary
[Qt] SmartReplaceQt.cpp has coding-style errors
Anders Bakken
Reported
2010-06-07 13:07:16 PDT
[Qt] SmartReplaceQt.cpp has coding-style errors
Attachments
Patch
(3.05 KB, patch)
2010-06-07 13:07 PDT
,
Anders Bakken
levin
: review-
Details
Formatted Diff
Diff
Fixing previous patch submitted by Anders Bakken to fix the coding-style on SmartReplaceQt.cpp
(3.00 KB, patch)
2011-04-05 09:13 PDT
,
Rafael Brandao
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Anders Bakken
Comment 1
2010-06-07 13:07:47 PDT
Created
attachment 58079
[details]
Patch
David Levin
Comment 2
2010-06-09 09:14:16 PDT
Comment on
attachment 58079
[details]
Patch
>+ No new tests. (OOPS!)
:(
Jędrzej Nowacki
Comment 3
2010-06-15 04:37:42 PDT
I don't like it, it destroys history of changes. I think it is not in the we work with webkit, general policy is that code shouldn't be changed only for a style reason. Personally I preferred previous version, but you are right, it is not webkit style. If you do want to make a fix, please change comments, they should be full phrases with point at the end. (In reply to
comment #2
)
> (From update of
attachment 58079
[details]
) > >+ No new tests. (OOPS!) > :(
The change don't need tests.
Rafael Brandao
Comment 4
2011-04-05 09:13:40 PDT
Created
attachment 88247
[details]
Fixing previous patch submitted by Anders Bakken to fix the coding-style on SmartReplaceQt.cpp
WebKit Commit Bot
Comment 5
2011-04-06 00:46:43 PDT
Comment on
attachment 88247
[details]
Fixing previous patch submitted by Anders Bakken to fix the coding-style on SmartReplaceQt.cpp Clearing flags on attachment: 88247 Committed
r83029
: <
http://trac.webkit.org/changeset/83029
>
WebKit Commit Bot
Comment 6
2011-04-06 00:46:48 PDT
All reviewed patches have been landed. Closing bug.
WebKit Commit Bot
Comment 7
2011-04-06 00:56:51 PDT
The commit-queue encountered the following flaky tests while processing
attachment 88247
[details]
: animations/suspend-resume-animation.html
bug 48161
(author:
cmarrin@apple.com
) The commit-queue is continuing to process your patch.
WebKit Review Bot
Comment 8
2011-04-06 01:53:07 PDT
http://trac.webkit.org/changeset/83029
might have broken GTK Linux 32-bit Debug
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug