2011-04-06  Anders Bakken  <agbakken@gmail.com>

Reviewed by David Levin.

        [Qt] SmartReplaceQt.cpp has coding-style errors
        https://bugs.webkit.org/show_bug.cgi?id=40261

        This patch does not require new test cases.

        * editing/qt/SmartReplaceQt.cpp:
        (WebCore::isCharacterSmartReplaceExempt):

Canonical link: https://commits.webkit.org/72809@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@83029 268f45cc-cd09-0410-ab3c-d52691b4dbfc